--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <meta name="google-signin-scope" content="profile email" />
   </head>
 
-  <body>
-    <app-root></app-root>
+  <body style="height: 100%;">
+    <app-root style="height: 100%;"></app-root>
   </body>
 </html>
